--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -65,8 +65,8 @@ jobs:
 
       - name: Generate configuration file
         run: |
-          rm -f ./.config*
-          touch ./.config
+          # rm -f ./.config*
+          # touch ./.config
 
           #
           # 在 cat >> .config <<EOF 到 EOF 之间粘贴你的编译配置, 需注意缩进关系
